<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_order_title_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_brown"
        android:gravity="center_horizontal"
        android:text="@string/order_title_top"
        android:textColor="@color/dark_brown"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/tv_order_title_drinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_brown"
        android:gravity="center_horizontal"
        android:text="@string/title_afout_drimk"
        android:textColor="@color/dark_brown"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_order_drinks"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/tv_hi_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/light_brown"
        android:gravity="center_horizontal"
        android:text="Выберите тип напитка:"
        android:textColor="@color/dark_brown"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_sugar"
        app:layout_constraintVertical_bias="0.04000002" />

    <RadioGroup
        android:id="@+id/rg_order_drinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_title_top"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rb_tea"
            style="@style/my_textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tea" />

        <RadioButton
            android:id="@+id/rb_cofe"
            style="@style/my_textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/cofe" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cb_milk"
        style="@style/my_textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cb_sugar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_title_drinks"
        app:layout_constraintVertical_bias="0.01999998" />

    <CheckBox
        android:id="@+id/cb_sugar"
        style="@style/my_textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        app:layout_constraintBottom_toBottomOf="@+id/cb_milk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cb_lemon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb_milk"
        app:layout_constraintTop_toTopOf="@+id/cb_milk" />

    <CheckBox
        android:id="@+id/cb_lemon"
        style="@style/my_textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        app:layout_constraintBottom_toBottomOf="@+id/cb_sugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb_sugar"
        app:layout_constraintTop_toTopOf="@+id/cb_sugar" />

    <Spinner
        android:id="@+id/sp_drink_type"
        style="@style/my_textStyle"
        android:entries="@array/tea_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hi_title3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_make_order"
        style="@style/my_bottomStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_order"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_drink_type" />

</androidx.constraintlayout.widget.ConstraintLayout>